--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
-  "name": "my-turborepo",
-  "version": "0.0.0",
-  "private": true,
-  "description": "",
-  "author": "",
-  "license": "UNLICENSED",
+  "name": "BoilerPlate",
+  "version": "1.0.0",
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
