--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
     "dev": "turbo run dev",
     "build": "turbo run build",
     "test": "turbo run test",
+    "start": "turbo run start",
     "test:e2e": "turbo run test:e2e",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "clean": "turbo run clean && rimraf node_modules",
+    "typecheck": "turbo run typecheck"
+
   },
   "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
-    "prettier": "^3.2.5",
-    "turbo": "^2.5.5"
+    "@types/express": "^5.0.3",
+    "turbo": "^2.5.5",
+    "typescript": "^5.8.3"
   },
   "engines": {
     "node": ">=18"
@@ -22,5 +25,8 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
