--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -12,10 +12,11 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/node": "^24.2.1",
+    "dotenv": "^17.2.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2",
-    "@types/express": "^5.0.3"
-    }
+    "typescript": "^5.9.2"
+  }
 }
