--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,73 @@
-PORT=3000
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=password
+PRIMARY.ENV="local"
+
+SERVER.PORT="8080"
+SERVER.READ_TIMEOUT="30"
+SERVER.WRITE_TIMEOUT="30"
+SERVER.IDLE_TIMEOUT="60"
+SERVER.CORS_ALLOWED_ORIGINS="http://localhost:3000"
+
+DATABASE.HOST="localhost"
+DATABASE.PORT="5432"
+DATABASE.USER="postgres"
+DATABASE.PASSWORD=""
+DATABASE.NAME="tasker"
+DATABASE.SSL_MODE="disable"
+DATABASE.MAX_OPEN_CONNS="25"
+DATABASE.MAX_IDLE_CONNS="25"
+DATABASE.CONN_MAX_LIFETIME="300"
+DATABASE.CONN_MAX_IDLE_TIME="300"
+
+AUTH.SECRET_KEY="secret"
+
+INTEGRATION.RESEND_API_KEY="resend_key"
+
+REDIS.ADDRESS="redis://localhost:6379"
+REDIS.PASSWORD=
+
+# ============================================================================
+# AWS CONFIGURATION
+# ============================================================================
+
+AWS.REGION="apac"
+AWS.ACCESS_KEY_ID=""
+AWS.SECRET_ACCESS_KEY=""
+AWS.UPLOAD_BUCKET="tasker-bucket"
+AWS.ENDPOINT_URL=""
+
+
+# ============================================================================
+# OBSERVABILITY CONFIGURATION
+# ============================================================================
+
+# Service Identity
+OBSERVABILITY.SERVICE_NAME="tasker"
+OBSERVABILITY.ENVIRONMENT="development"
+
+# ============================================================================
+# LOGGING CONFIGURATION
+# ============================================================================
+
+# Basic Logging Settings
+OBSERVABILITY.LOGGING.LEVEL="debug"
+OBSERVABILITY.LOGGING.FORMAT="console"
+OBSERVABILITY.LOGGING.SLOW_QUERY_THRESHOLD="100ms"
+
+# ============================================================================
+# NEW RELIC CONFIGURATION
+# ============================================================================
+
+# New Relic APM
+OBSERVABILITY.NEW_RELIC.LICENSE_KEY="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+OBSERVABILITY.NEW_RELIC.APP_LOG_FORWARDING_ENABLED="true"
+OBSERVABILITY.NEW_RELIC.DISTRIBUTED_TRACING_ENABLED="true"
+OBSERVABILITY.NEW_RELIC.DEBUG_LOGGING="false"
+
+# ============================================================================
+# HEALTH CHECKS CONFIGURATION
+# ============================================================================
+
+# Health Check Settings
+OBSERVABILITY.HEALTH_CHECKS.ENABLED="true"
+OBSERVABILITY.HEALTH_CHECKS.INTERVAL="30s"
+OBSERVABILITY.HEALTH_CHECKS.TIMEOUT="5s"
+OBSERVABILITY.HEALTH_CHECKS.CHECKS="database,redis"
