--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^5.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
+    "winston": "^3.17.0",
     "zod": "^4.0.17"
   }
 }
