--- a/.env.dev
+++ b/.env.dev
@@ -9,8 +9,8 @@ SERVER.CORS_ALLOWED_ORIGINS="http://localhost:3000"
 DATABASE.HOST="localhost"
 DATABASE.PORT="5432"
 DATABASE.USER="postgres"
-DATABASE.PASSWORD=""
-DATABASE.NAME="tasker"
+DATABASE.PASSWORD="Datopic123"
+DATABASE.NAME="knextest"
 DATABASE.SSL_MODE="disable"
 DATABASE.MAX_OPEN_CONNS="25"
 DATABASE.MAX_IDLE_CONNS="25"
