--- a/package.json
+++ b/package.json
@@ -5,17 +5,29 @@
   "scripts": {
     "dev": "ts-node src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "generate": "ts-node src/api-docs/index.ts"
   },
   "dependencies": {
+    "@anatine/zod-openapi": "^2.2.7",
     "@scalar/express-api-reference": "^0.8.13",
-    "@types/express": "^5.0.3",
+    "@ts-rest/core": "^3.52.1",
+    "@ts-rest/express": "^3.52.1",
+    "@ts-rest/open-api": "^3.52.1",
+    "@types/express": "^4.17.13",
     "@types/node": "^24.2.1",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.2",
+    "express": "^4.18.0",  
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.7",
+    "ts-pattern": "^5.7.0",
     "winston": "^3.17.0",
-    "zod": "^4.0.17"
+    "openapi3-ts": "^4.1.2",
+    "zod": "^3.20.0"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
