path import style

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,11 @@
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "baseUrl": "./src",
+     "paths": {
+    "@zod/*": ["../zod/*"] 
+      }
   },
   "include": [
     "src/**/*.ts"
