migration and dialect added

--- a/.env.dev
+++ b/.env.dev
@@ -16,6 +16,7 @@ DATABASE.MAX_OPEN_CONNS="25"
 DATABASE.MAX_IDLE_CONNS="25"
 DATABASE.CONN_MAX_LIFETIME="300"
 DATABASE.CONN_MAX_IDLE_TIME="300"
+DATABASE.DIALECT="postgres"
 
 AUTH.SECRET_KEY="secret"
 
