--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "node dist/server.js",
     "generate": "ts-node src/api-docs/index.ts",
     "db:migrate": "npx sequelize-cli db:migrate",
-  "db:migrate:undo": "sequelize-cli db:migrate:undo",
-  "db:migrate:undo:all": "sequelize-cli db:migrate:undo:all",
-  "db:seed": "sequelize-cli db:seed:all",
-  "db:seed:undo": "sequelize-cli db:seed:undo:all",
-  "db:migration:generate": "npx sequelize-cli migration:generate --name"
+    "db:migrate:undo": "sequelize-cli db:migrate:undo",
+    "db:migrate:undo:all": "sequelize-cli db:migrate:undo:all",
+    "db:seed": "sequelize-cli db:seed:all",
+    "db:seed:undo": "sequelize-cli db:seed:undo:all",
+    "db:migration:generate": "npx sequelize-cli migration:generate --name",
+    "lint": "npx @biomejs/biome lint  --write src/**/*.ts",
+    "format": "npx @biomejs/biome format  --write src/**/*.ts"
   },
   "dependencies": {
     "@anatine/zod-openapi": "^2.2.7",
@@ -23,16 +25,19 @@
     "@types/express": "^4.17.13",
     "@types/node": "^24.2.1",
     "dotenv": "^17.2.1",
-    "express": "^4.18.0",  
+    "express": "^4.18.0",
+    "openapi3-ts": "^4.1.2",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "ts-pattern": "^5.7.0",
     "winston": "^3.17.0",
-    "openapi3-ts": "^4.1.2",
     "zod": "^3.20.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
+    "biome": "^0.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
