--- a/.env.dev
+++ b/.env.dev
@@ -1,74 +1,57 @@
-PRIMARY.ENV="local"
+PRIMARY_ENV="local"
 
-SERVER.PORT="8080"
-SERVER.READ_TIMEOUT="30"
-SERVER.WRITE_TIMEOUT="30"
-SERVER.IDLE_TIMEOUT="60"
-SERVER.CORS_ALLOWED_ORIGINS="http://localhost:3000"
+SERVER_PORT="8084"
+SERVER_READ_TIMEOUT="30"
+SERVER_WRITE_TIMEOUT="30"
+SERVER_IDLE_TIMEOUT="60"
+SERVER_CORS_ALLOWED_ORIGINS="http://localhost:3000"
 
-DATABASE.HOST="localhost"
-DATABASE.PORT="5432"
-DATABASE.USER="postgres"
-DATABASE.PASSWORD="Datopic123"
-DATABASE.NAME="knextest"
-DATABASE.SSL_MODE="disable"
-DATABASE.MAX_OPEN_CONNS="25"
-DATABASE.MAX_IDLE_CONNS="25"
-DATABASE.CONN_MAX_LIFETIME="300"
-DATABASE.CONN_MAX_IDLE_TIME="300"
-DATABASE.DIALECT="postgres"
+DATABASE_HOST="localhost"
+DATABASE_PORT="5432"
+DATABASE_USER="postgres"
+DATABASE_PASSWORD="Datopic123"
+DATABASE_NAME="knextest"
+DATABASE_SSL_MODE="disable"
+DATABASE_MAX_OPEN_CONNS="25"
+DATABASE_MAX_IDLE_CONNS="25"
+DATABASE_CONN_MAX_LIFETIME="300"
+DATABASE_CONN_MAX_IDLE_TIME="300"
+DATABASE_DIALECT="postgres"
 
-AUTH.SECRET_KEY="secret"
+AUTH_SECRET_KEY="secret"
 
-INTEGRATION.RESEND_API_KEY="resend_key"
+INTEGRATION_RESEND_API_KEY="resend_key"
 
-REDIS.ADDRESS="redis://localhost:6379"
-REDIS.PASSWORD=
+REDIS_ADDRESS="redis://localhost:6379"
+REDIS_PASSWORD=
 
 # ============================================================================
 # AWS CONFIGURATION
 # ============================================================================
 
-AWS.REGION="apac"
-AWS.ACCESS_KEY_ID=""
-AWS.SECRET_ACCESS_KEY=""
-AWS.UPLOAD_BUCKET="tasker-bucket"
-AWS.ENDPOINT_URL=""
-
+AWS_REGION="apac"
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
+AWS_UPLOAD_BUCKET="tasker-bucket"
+AWS_ENDPOINT_URL=""
 
 # ============================================================================
 # OBSERVABILITY CONFIGURATION
 # ============================================================================
 
-# Service Identity
-OBSERVABILITY.SERVICE_NAME="tasker"
-OBSERVABILITY.ENVIRONMENT="development"
+OBSERVABILITY_SERVICE_NAME="tasker"
+OBSERVABILITY_ENVIRONMENT="development"
 
-# ============================================================================
-# LOGGING CONFIGURATION
-# ============================================================================
+OBSERVABILITY_LOGGING_LEVEL="debug"
+OBSERVABILITY_LOGGING_FORMAT="console"
+OBSERVABILITY_LOGGING_SLOW_QUERY_THRESHOLD="100ms"
 
-# Basic Logging Settings
-OBSERVABILITY.LOGGING.LEVEL="debug"
-OBSERVABILITY.LOGGING.FORMAT="console"
-OBSERVABILITY.LOGGING.SLOW_QUERY_THRESHOLD="100ms"
+OBSERVABILITY_NEW_RELIC_LICENSE_KEY="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+OBSERVABILITY_NEW_RELIC_APP_LOG_FORWARDING_ENABLED="true"
+OBSERVABILITY_NEW_RELIC_DISTRIBUTED_TRACING_ENABLED="true"
+OBSERVABILITY_NEW_RELIC_DEBUG_LOGGING="false"
 
-# ============================================================================
-# NEW RELIC CONFIGURATION
-# ============================================================================
-
-# New Relic APM
-OBSERVABILITY.NEW_RELIC.LICENSE_KEY="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-OBSERVABILITY.NEW_RELIC.APP_LOG_FORWARDING_ENABLED="true"
-OBSERVABILITY.NEW_RELIC.DISTRIBUTED_TRACING_ENABLED="true"
-OBSERVABILITY.NEW_RELIC.DEBUG_LOGGING="false"
-
-# ============================================================================
-# HEALTH CHECKS CONFIGURATION
-# ============================================================================
-
-# Health Check Settings
-OBSERVABILITY.HEALTH_CHECKS.ENABLED="true"
-OBSERVABILITY.HEALTH_CHECKS.INTERVAL="30s"
-OBSERVABILITY.HEALTH_CHECKS.TIMEOUT="5s"
-OBSERVABILITY.HEALTH_CHECKS.CHECKS="database,redis"
+OBSERVABILITY_HEALTH_CHECKS_ENABLED="true"
+OBSERVABILITY_HEALTH_CHECKS_INTERVAL="30s"
+OBSERVABILITY_HEALTH_CHECKS_TIMEOUT="5s"
+OBSERVABILITY_HEALTH_CHECKS_CHECKS="database,redis"
