--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "outDir": "./dist",
     "baseUrl": "./src",
      "paths": {
-    "@zod/*": ["../zod/*"] 
+    "@zod/*": ["../zod/*"],
+    "@logger/*": ["logger/*"],
       }
   },
   "include": [
