added sample migrations

--- a/.env.dev
+++ b/.env.dev
@@ -11,7 +11,7 @@ DATABASE_HOST="localhost"
 DATABASE_PORT="5432"
 DATABASE_USER="postgres"
 DATABASE_PASSWORD="Datopic123"
-DATABASE_NAME="knextest"
+DATABASE_NAME="bp"
 DATABASE_SSL_MODE="disable"
 DATABASE_MAX_OPEN_CONNS="25"
 DATABASE_MAX_IDLE_CONNS="25"
