--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node -r tsconfig-paths/register src/server.ts",
+    "dev": "ts-node -r tsconfig-paths/register server/server.ts",
     "build": "tsc",
     "start": "node  dist/server.js",
-    "generate": "ts-node -r tsconfig-paths/register src/api-docs/gen.ts",
+    "generate": "ts-node -r tsconfig-paths/register server/api-docs/gen.ts",
     "db:migrate": "npx sequelize-cli db:migrate",
     "db:migrate:undo": "sequelize-cli db:migrate:undo",
     "db:migrate:undo:all": "sequelize-cli db:migrate:undo:all",
