--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"includes": ["src/**/*.ts"]
+		"includes": ["server/**/*.ts"]
 	},
 	"formatter": {
 		"enabled": true,
