new relic types

--- a/.env.dev
+++ b/.env.dev
@@ -40,14 +40,14 @@ AWS_ENDPOINT_URL=""
 # OBSERVABILITY CONFIGURATION
 # ============================================================================
 
-OBSERVABILITY_SERVICE_NAME="tasker"
+NEW_RELIC_APP_NAME="BoilerPlate"
 OBSERVABILITY_ENVIRONMENT="development"
 
 OBSERVABILITY_LOGGING_LEVEL="debug"
 OBSERVABILITY_LOGGING_FORMAT="console"
 OBSERVABILITY_LOGGING_SLOW_QUERY_THRESHOLD="100ms"
 
-OBSERVABILITY_NEW_RELIC_LICENSE_KEY="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+NEW_RELIC_LICENSE_KEY="bf870d25d37bc6591919e0e8ea81ddedFFFFNRAL"
 OBSERVABILITY_NEW_RELIC_APP_LOG_FORWARDING_ENABLED="true"
 OBSERVABILITY_NEW_RELIC_DISTRIBUTED_TRACING_ENABLED="true"
 OBSERVABILITY_NEW_RELIC_DEBUG_LOGGING="false"
