--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ts-rest/express": "^3.52.1",
     "@ts-rest/open-api": "^3.52.1",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.2.1",
     "dotenv": "^17.2.1",
     "express": "^4.18.0",
